--- a/app/admin/view/admin/password.html
+++ b/app/admin/view/admin/password.html
@@ -1,4 +1,4 @@
-{extend name="public/base" /}
+{extend name="public/base_xadmin" /}
 {block name="title"}更改密码{/block}
 {block name="load"}
 <!-- css -->
