--- a/app/admin/view/public/base_xadmin.html
+++ b/app/admin/view/public/base_xadmin.html
@@ -16,6 +16,7 @@
     <script src="__COMMON__/js/jquery.cookie.js" charset="utf-8"></script>
     <script src="__COMMON__/js/common.js" charset="utf-8"></script>
     <script src="__COMMON__/js/ajax.js" charset="utf-8"></script>
+    <script src="__COMMON__/js/ajax_layui.js" charset="utf-8"></script>
 </head>
 <script>
     // 验证登录
