--- a/app/admin/view/admin/index.html
+++ b/app/admin/view/admin/index.html
@@ -6,6 +6,11 @@
 {/block}
 {block name="main"}
 <div class="layui-fluid">
+  <div class="layui-row layui-col-md-offset0" style="margin-bottom:20px;">
+    <div class="layui-col-md9">
+      <a href="/view/admin_save" class="layui-btn layui-btn-danger">添加管理员</a>
+    </div>
+  </div>
   <div class="layui-form">
     <div class="layui-input-inline">
       <input class="layui-input" type="text" name="id" value="" placeholder="ID" id="idReload">
@@ -25,37 +30,14 @@
 <!-- 加载layuijs -->
 <script src="__LAYUIADMIN__/layui/layui.js" charset="utf-8"></script>
 
-<script type="text/html" id="usernameTpl">
-    <a href="javascript:;" lay-event="username" style="color:#01AAED;">{{ d.username }}</a>
-  </script>
-
-<script type="text/html" id="realNameTpl">
-    <p style="color:#009688">{{ d.real_name }}</p>
-  </script>
-
-<script type="text/html" id="phoneTpl">
-    <p>{{ d.phone }}</p>
-  </script>
-
-<script type="text/html" id="wechatTpl">
-    <p>{{ d.wechat }}</p>
-  </script>
-
-<script type="text/html" id="loginNumberTpl">
-    <p>{{ d.login_number }}</p>
-  </script>
-
-<script type="text/html" id="lastLoginIpTpl">
-    <p>{{ d.last_login_ip }}</p>
-  </script>
 
 <script type="text/html" id="lastLoginTimeTpl">
-    <p>{{ d.last_login_time }}</p>
-  </script>
+    <p>{{ d.last_login_time ? timestampToTime(d.last_login_time) : '--' }}</p>
+</script>
 
 <script type="text/html" id="createTimeTpl">
-    <p>{{ d.create_time }}</p>
-  </script>
+  <p>{{ d.create_time ? timestampToTime(d.create_time) : '--' }}</p>
+</script>
 
 <script type="text/html" id="statusTpl">
     <a onclick="ajax_change_status(this)"
@@ -66,7 +48,7 @@
       class="layui-btn layui-btn-sm {{ d.status == 1 ? '' : 'layui-btn-danger' }}">
       {{ d.status == 1 ? '开启' : '关闭' }}
     </a>
-  </script>
+</script>
 
 <script type="text/html" id="operationTpl">
     <button class="layui-btn layui-btn-sm" lay-event="update">
@@ -77,11 +59,11 @@
 			<i class="layui-icon">&#xe683;</i>
 			修改密码
 		</button>
-    <button class="layui-btn layui-btn-sm layui-btn-danger" lay-event="delete">
+    <button class="layui-btn layui-btn-sm layui-bg-black" lay-event="delete">
 			<i class="layui-icon">&#xe640;</i>
 			删除
 		</button>
-  </script>
+</script>
 
 <script>
   layui.use(['jquery', 'layer', 'table', 'flow', 'form'], function () {
@@ -94,7 +76,7 @@
     // 第一个实例
     var ins1 = table.render({
       elem: '#table_akali'
-      , url: '/admin/index' //数据接口
+      , url: '/admin' //数据接口
       , page: true //开启分页
       , id: 'table_akali'
       , limit: 20
@@ -102,14 +84,14 @@
       , size: 'lg'
       , cols: [[ //表头
         { field: 'id', title: 'ID', width: 80, sort: true, fixed: 'left' }
-        , { field: 'username', title: '管理员名称', width: 120, edit: 'text', templet: '#usernameTpl' }
-        , { field: 'real_name', title: '真实姓名', width: 120, templet: '#realNameTpl' }
-        , { field: 'phone', title: '手机', width: 150, templet: '#phoneTpl' }
-        , { field: 'wechat', title: '微信', width: 150, templet: '#wechatTpl' }
-        , { field: 'login_number', title: '登录次数', width: 150, sort: true, templet: '#loginNumberTpl' }
+        , { field: 'username', title: '管理员名称', width: 120 }
+        , { field: 'real_name', title: '真实姓名', width: 120 }
+        , { field: 'phone', title: '手机', width: 150 }
+        , { field: 'wechat', title: '微信', width: 150 }
+        , { field: 'login_number', title: '登录次数', width: 120, sort: true, templet: '#loginNumberTpl' }
         , { field: 'last_login_ip', title: '上次登录ip', width: 150, templet: '#lastLoginIpTpl' }
-        , { field: 'last_login_time', title: '上次登录时间', width: 150, sort: true, templet: '#lastLoginTimeTpl' }
-        , { field: 'create_time', title: '创建时间', width: 150, sort: true, templet: '#createTimeTpl' }
+        , { field: 'last_login_time', title: '上次登录时间', width: 180, sort: true, templet: '#lastLoginTimeTpl' }
+        , { field: 'create_time', title: '创建时间', width: 180, sort: true, templet: '#createTimeTpl' }
         , { field: 'status', title: '状态', width: 90, templet: '#statusTpl', fixed: 'right' }
         , { field: 'edit', title: '操作', minwidth: 160, templet: '#operationTpl', fixed: 'right' }
       ]]
@@ -159,6 +141,7 @@
       var data = obj.data; // 获得当前行数据
       var layEvent = obj.event; // 获得 lay-event 对应的值（也可以是表头的 event 参数对应的值）
 
+      // 修改
       if (layEvent === 'update') {
         layer.open({
           type: 2,
@@ -166,8 +149,10 @@
           content: '/view/admin_update/' + data.id,
           shadeClose: true,
           shade: [0.8, '#000000'],
-          area: ['600px', '400px'],
+          area: ['1000px', '600px'],
         });
+
+        // 修改密码
       } else if (layEvent === 'password') {
         layer.open({
           type: 2,
@@ -177,43 +162,13 @@
           shade: [0.8, '#000000'],
           area: ['500px', '300px'],
         });
+
+        // 删除
       } else if (layEvent === 'delete') {
-        layui_form_delete(obj, '/admin/delete/' + data.id);
+        layui_form_delete(this, '/admin/' + data.id);
       }
     });
   });
-
-  // 管理员改变状态
-  function admin_change_status(obj) {
-    // 数据
-    var id = $(obj).attr("data-id"); // id
-    var value = $(obj).attr("data-value") == 1 ? 0 : 1; // 要修改的值
-
-    $.ajax({
-      type: "PUT",
-      contentType: "application/x-www-form-urlencoded",
-      url: '/admin/change_status',
-      data: {
-        id: id,
-        value: value,
-      },
-      beforeSend: function (request) {
-        request.setRequestHeader("access-token", getToken());
-      },
-      success: function (res) {
-
-        if (res.code == config('failed')) {
-          layer.msg(res.msg, { icon: 2 });
-          return false;
-        }
-
-        if (res.data.value == 1) {
-          $(obj).removeClass("layui-btn-danger").attr("data-value", 1).text("开启");
-        } else {
-          $(obj).addClass("layui-btn-danger").attr("data-value", 0).text("关闭");
-        }
-      }
-    });
-  }
+  
 </script>
 {/block}
