--- a/app/admin/view/admin/login.html
+++ b/app/admin/view/admin/login.html
@@ -78,7 +78,7 @@
           $.ajax({
             type: "POST",
             contentType: "application/x-www-form-urlencoded",
-            url: '/admin/login',
+            url: '/login',
             data: {
               username: data.field.username,
               password: data.field.password
@@ -88,10 +88,14 @@
               if (res.code === config('failed')) {
                 layer.msg(res.msg);
               } else if (res.code === config('success')) {
-                layer.msg('登录成功！', {time: 500}, function () {
-                  $.cookie('admin_login_token', res.data.token, { expires: 100 * 365, path: '/' });
-                  $(window).attr('location', '/view/index');
-                });
+                $.cookie('admin_login_token', res.data.token, { expires: 100 * 365, path: '/' });
+                $(window).attr('location', '/view/index');
+
+                // 下面这提示有点烦~~~
+                // layer.msg('登录成功！', {time: 500}, function () {
+                //   $.cookie('admin_login_token', res.data.token, { expires: 100 * 365, path: '/' });
+                //   $(window).attr('location', '/view/index');
+                // });
               }
             }
           });
