--- a/app/admin/view/public/base_layui.html
+++ b/app/admin/view/public/base_layui.html
@@ -1,53 +1,59 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<title>{block name="title"}威速易{/block}</title>
 	<meta name="renderer" content="webkit">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
-	
-    <link href="__LAYUIADMIN__/layui/css/layui.css" rel="stylesheet">
-    <link href="__LAYUIADMIN__/style/admin.css" rel="stylesheet">
+	<meta name="viewport"
+		content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-    <script src="__COMMON__/js/jquery.min.js" charset="utf-8"></script>
-    <script src="__COMMON__/js/jquery.cookie.js" charset="utf-8"></script>
-    <script src="__COMMON__/js/common.js" charset="utf-8"></script>
-    <script src="__COMMON__/js/ajax.js" charset="utf-8"></script>
+	<link href="__LAYUIADMIN__/layui/css/layui.css" rel="stylesheet">
+	<link href="__LAYUIADMIN__/style/admin.css" rel="stylesheet">
+
+	<!-- 加载layuijs -->
+	<script src="__LAYUIADMIN__/layui/layui.js" charset="utf-8"></script>
+
+	<script src="__COMMON__/js/jquery.min.js" charset="utf-8"></script>
+	<script src="__COMMON__/js/jquery.cookie.js" charset="utf-8"></script>
+	<script src="__COMMON__/js/common.js" charset="utf-8"></script>
+	<script src="__COMMON__/js/ajax.js" charset="utf-8"></script>
+	<script src="__COMMON__/js/ajax_layui.js" charset="utf-8"></script>
 	<script>
 		// 验证登录
 		isAdminLogin();
 	</script>
 	{block name="load"}{/block}
 </head>
+
 <body>
 	{block name="main"}主内容{/block}
-	
+
 	<!-- 打开放大图片窗口 - 容器 -->
 	<div id="akali" class="hide layui-layer-wrap" style="display: none;">
-		<img src="" id=""/>
+		<img src="" id="" />
 	</div>
 	<!-- 打开放大图片窗口 - js -->
 	<script>
-		function open_img(obj)
-		{
-			layui.use(['jquery', 'layer','table','flow','form'], function(){
+		function open_img(obj) {
+			layui.use(['jquery', 'layer', 'table', 'flow', 'form'], function () {
 				var table = layui.table
-				,$ = layui.$
-				,layer = layui.layer
-				
+					, $ = layui.$
+					, layer = layui.layer
+
 				var src = obj.src;
 				$('#akali img').attr('src', src);
-				
+
 				// 获取图片的真实宽高
-				$('<img/>').attr("src", $('#akali img').attr("src")).load(function() {
+				$('<img/>').attr("src", $('#akali img').attr("src")).load(function () {
 
 					var pic_real_width = this.width > 1280 ? 1280 : this.width;   // Note: $(this).width() will not
 					var pic_real_height = this.height; // work for in memory images.
-					
+
 					// 设置图片的宽度不能超过1280px
 					$('#akali img').attr('width', pic_real_width);
-					
+
 					// 页面层-佟丽娅
 					layer.open({
 						type: 1,
@@ -62,5 +68,7 @@
 			});
 		}
 	</script>
-<body>
+
+	<body>
+
 </html>
