--- a/app/admin/view/admin/index.html
+++ b/app/admin/view/admin/index.html
@@ -146,7 +146,7 @@
         layer.open({
           type: 2,
           title: '管理员更新',
-          content: '/view/admin_update/' + data.id,
+          content: '/view/admin_update?id=' + data.id,
           shadeClose: true,
           shade: [0.8, '#000000'],
           area: ['1000px', '600px'],
@@ -157,7 +157,7 @@
         layer.open({
           type: 2,
           title: '修改密码',
-          content: '/view/admin_password/' + data.id,
+          content: '/view/admin_password?id=' + data.id,
           shadeClose: true,
           shade: [0.8, '#000000'],
           area: ['500px', '300px'],
