--- a/app/admin/view/admin/password.html
+++ b/app/admin/view/admin/password.html
@@ -44,7 +44,7 @@
 </div>
 <script>
     // 表单赋值
-    $('#id').val(get_url_id());
+    $('#id').val(getParams()['id']);
     
     // layui
     layui.use(['form', 'layer'], function () {
