--- a/app/admin/view/admin/update.html
+++ b/app/admin/view/admin/update.html
@@ -77,24 +77,17 @@
 
                     <tr>
                         <td align="right"><strong>角色：</strong></td>
-                        <td>
-                            <div class="akali" style="margin-bottom:10px;">
+                        <td id="role-td">
+                            <div style="margin-bottom:10px;" class="role-div">
                                 <div class="layui-input-inline">
-                                    <select name="role[]">
+                                    <select id="role-select">
                                         <option value="">请选择</option>
-                                        <option value="1">超级管理员</option>
-                                        <option value="2">文章管理员</option>
                                     </select>
                                 </div>
                                 <a href="javascript:;" class="layui-btn layui-btn-sm" onclick="add(this)">
                                     <i class="layui-icon">&#xe654;</i> 增加
                                 </a>
-                                <a href="javascript:;" class="layui-btn layui-bg-black layui-btn-sm"
-                                    onclick="del(this)">
-                                    <i class="layui-icon">&#xe640;</i> 删除
-                                </a>
                             </div>
-                            <div class="jinx" style="display:hidden;"></div>
                         </td>
                     </tr>
 
@@ -125,6 +118,26 @@
 
 
 <script>
+
+    // 获取角色数据
+    var role = ajax_list('/role');
+    console.log(role);
+    for (let value of role) {
+        $('#role-select').append('<option value="' + value['id'] + '">' + value['name'] + '</option>');
+    }
+
+    // 表单赋值
+    let data = ajax_read('/admin');
+    for (let role of data['roles']) {
+        $('#role-td').append(
+            '<div class="layui-input-inline" style="margin-right:10px;">' +
+            '<button type="button" class="layui-btn">'+role['name']+'</button>' +
+            '<input type="hidden" name="roles[]" value="'+role['id']+'">' +
+            '<a href="javascript:;" class="layui-btn layui-bg-black" onclick="del(this)">删除</a>' +
+            '</div>'
+        );
+    }
+
     // layui
     layui.use(['form', 'layer'], function () {
 
@@ -132,8 +145,6 @@
         var form = layui.form,
             layer = layui.layer;
 
-        // 表单赋值
-        var data = ajax_read('/admin');
         form.val("form", data);
         // 取值
         // data = form.val("form");
@@ -157,35 +168,35 @@
 
     // 增加权限下拉框
     function add(obj) {
-        layui.use(['jquery', 'layer'], function () {
-            var layer = layui.layer
-                , $ = layui.$
-                , form = layui.form
+        var value = $('#role-select').val();
+        var name = $('#role-select').find("option:selected").text();
+        console.log(empty(value));
+        console.log(name);
+        
+        if (empty(value)) {
+            return false;
+        }
 
-            var html = $(obj).parents('#role-div').clone();
-            $('#"role-td').append(html);
+        $('#role-td').append(
+            '<div class="layui-input-inline" style="margin-right:10px;">' +
+            '<button type="button" class="layui-btn">'+name+'</button>' +
+            '<input type="hidden" name="roles[]" value="'+value+'">' +
+            '<a href="javascript:;" class="layui-btn layui-bg-black" onclick="del(this)">删除</a>' +
+            '</div>'
+        );
 
+        layui.use(['form'], function () {
+            var form = layui.form
             form.render();
         });
-
     }
 
     function del(obj) {
-        layui.use(['jquery', 'layer'], function () {
-            var layer = layui.layer
-                , $ = layui.$
-                , form = layui.form
-
-            var len = $('#role-div').length;
-            if (len <= 1) {
-                return false;
-            }
-
-            $(obj).parents('#role-div').remove();
-
+        $(obj).parents('.layui-input-inline').remove();
+        layui.use(['form'], function () {
+            var form = layui.form
             form.render();
         });
-
     }
 </script>
 {/block}
