--- a/app/admin/view/public/base_layui.html
+++ b/app/admin/view/public/base_layui.html
@@ -9,10 +9,12 @@
 	<meta name="viewport"
 		content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-	<link href="__LAYUIADMIN__/layui/css/layui.css" rel="stylesheet">
+	<link href="__COMMON__/lib/layui/css/layui.css" rel="stylesheet">
+	<!-- <link href="__LAYUIADMIN__/layui/css/layui.css" rel="stylesheet"> -->
 	<link href="__LAYUIADMIN__/style/admin.css" rel="stylesheet">
 
 	<!-- 加载layuijs -->
+	<!-- <script src="__COMMON__/lib/layui/layui.js" charset="utf-8"></script> -->
 	<script src="__LAYUIADMIN__/layui/layui.js" charset="utf-8"></script>
 
 	<script src="__COMMON__/js/jquery.min.js" charset="utf-8"></script>
