--- a/app/admin/view/role/index.html
+++ b/app/admin/view/role/index.html
@@ -66,7 +66,7 @@
             shadeClose: true,
             shade: [0.8, '#000000'],
             area: ['700px', '500px'],
-            content: "/view/role_update/" + id,
+            content: "/view/role_update?id=" + id,
         });
     }
 
@@ -79,7 +79,7 @@
             shadeClose: true,
             shade: [0.8, '#000000'],
             area: ['700px', '500px'],
-            content: "/view/role_auth/" + id,
+            content: "/view/role_auth?id=" + id,
         });
     }
 
