--- a/app/admin/view/node/update.html
+++ b/app/admin/view/node/update.html
@@ -1,5 +1,5 @@
 {extend name="public/base_layui" /}
-{block name="title"}节点保存{/block}
+{block name="title"}节点更新{/block}
 {block name="load"}
 <!-- css -->
 <!-- js -->
@@ -12,7 +12,7 @@
             <table class="layui-table" lay-size="lg" lay-skin="line">
                 <thead>
                     <tr>
-                        <th colspan="2">节点添加</th>
+                        <th colspan="2">节点更新</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -23,7 +23,7 @@
                                 <input class="layui-input" type="text" name="name" placeholder="节点名称">
                             </div>
                             <div class="layui-input-inline">
-                                <span style="color: red;">*</span>  例如：一级 admin 二级 admin/index
+                                <span style="color: red;">*</span> 例如：一级 admin 二级 admin/index
                             </div>
                         </td>
                     </tr>
@@ -56,7 +56,7 @@
                                 <input class="layui-input" type="text" name="level" placeholder="层级">
                             </div>
                             <div class="layui-input-inline">
-                                层级 从0开始
+                                层级从0开始
                             </div>
                         </td>
                     </tr>
@@ -85,7 +85,7 @@
                         <td>
                             <div class="layui-input-inline">
                                 <input type="radio" name="show" value="1" title="是">
-                                <input type="radio" name="show" value="0" title="否" checked>
+                                <input type="radio" name="show" value="0" title="否">
                             </div>
                             <div class="layui-input-inline">
                                 是否显示在左侧导航
@@ -96,7 +96,7 @@
                         <td width="150" align="right"><strong>刷新页面：</strong></td>
                         <td>
                             <div class="layui-input-inline">
-                                <input type="radio" name="refresh" value="1" title="是" checked>
+                                <input type="radio" name="refresh" value="1" title="是" >
                                 <input type="radio" name="refresh" value="0" title="否">
                             </div>
                             <div class="layui-input-inline">
@@ -109,7 +109,7 @@
                         <td align="right"><strong>状态：</strong></td>
                         <td>
                             <div class="layui-input-inline">
-                                <input type="radio" name="status" value="1" title="正常" checked>
+                                <input type="radio" name="status" value="1" title="正常">
                                 <input type="radio" name="status" value="0" title="禁止">
                             </div>
                         </td>
@@ -119,7 +119,8 @@
                         <td>
                             <div class="layui-input-inline">
                                 <button class="layui-btn" lay-submit lay-filter="formSubmit">立即提交</button>
-                                <input type="hidden" name="parent_id" value="0">
+                                <input type="hidden" name="parent_id">
+                                <input type="hidden" name="id">
                             </div>
                         </td>
                     </tr>
@@ -130,16 +131,21 @@
 </div>
 
 <script>
-    
-    var parent_id = getParams()['parent_id'];
-    $('input[name="parent_id"]').val(parent_id);
 
-    layui.use(['form'], function () {
-        // 表单实例化
+    // var id = getParams()['id'];
+    // console.log(id);
+    // $('input[name="id"]').val(id);
+
+    layui.use(['form', 'layer'], function () {
         var form = layui.form;
+        // 获取数据
+        var data = ajax_read('/node');
+        console.log(data);
+        // 表单赋值
+        form.val("form", data);
 
-        // 保存
-        layui_ajax_save(form, '/node');
+        // 更新数据
+        layui_ajax_update(form, '/node');
     });
 </script>
 {/block}
