--- a/app/admin/view/role/auth.html
+++ b/app/admin/view/role/auth.html
@@ -2,15 +2,15 @@
 {block name="main"}
 <div class="layui-fluid">
 	<div class="layui-row layui-col-sm10 layui-col-md-offset0" style="margin-bottom:20px;">
-		<div class="layui-col-md9"><a href="javascript:add(0);" class="layui-btn layui-btn-danger">添加节点</a></div>
+		<div class="layui-col-md9"><a href="javascript:save_auth();" class="layui-btn">立即提交</a></div>
 	</div>
-
 	<div class="layui-col-sm10 layui-col-md-offset1">
 		<div id="test1" class="demo-tree"></div>
 	</div>
 </div>
 
 <script>
+	let tree_demo = null;
 	layui.use(['jquery', 'layer', 'table', 'tree'], function () {
 		var table = layui.table
 			, $ = layui.$
@@ -19,19 +19,26 @@
 
 		// 获取数据
 		let data = ajax_list('/node');
-		// console.log(data);
+		console.log(data);
 		// return false;
+		// 获取角色数据
+		let role = ajax_read('/role');
+		// console.log(role);
+		var checkbox = [];
+		for (let value of role['nodes']) {
+			checkbox.push(value['id']);
+		}
+		// console.log(checkbox);
 
 		// 树形菜单
-		tree.render({
+		// tree.render({
+		tree_demo = tree.render({
 			elem: '#test1'
 			, data: data
-			//,showCheckbox: true  // 是否显示复选框
+			, showCheckbox: true  // 是否显示复选框
 			, id: 'demoId'  // 定义索引名称
 			, spread: true  // 展开节点(依赖于 key 参数)
-			, accordion: true //是否开启手风琴模式
-			, edit: ['add', 'update', 'del'] // 操作节点的图标
-			// , showLine: false // 是否开启连接线。默认 true，若设为 false，则节点左侧出现三角图标。
+			, accordion: true // 是否开启手风琴模式
 
 			// 节点被点击的回调
 			, click: function (obj) {
@@ -40,12 +47,12 @@
 			}
 
 			// 复选框被点击的回调
-			, oncheck: function (obj) {
-				console.log(obj.data); //得到当前点击的节点数据
-				console.log(obj.checked); //得到当前节点的展开状态：open、close、normal
-				console.log(obj.elem); //得到当前节点元素
-				console.log(obj.hasChild); //当前节点下是否有子节点
-			}
+			// , oncheck: function (obj) {
+			// 	console.log(obj.data); //得到当前点击的节点数据
+			// 	console.log(obj.checked); //得到当前节点的展开状态：open、close、normal
+			// 	console.log(obj.elem); //得到当前节点元素
+			// 	console.log(obj.hasChild); //当前节点下是否有子节点
+			// }
 
 			// 节点增/删/改的回调
 			, operate: function (obj) {
@@ -66,25 +73,33 @@
 					// var title = elem.find('.layui-tree-txt').html();
 					add(pid);
 
-				} else if (type === 'update') { //修改节点
+				} else if (type === 'update') { // 修改节点
 					// var title = elem.find('.layui-tree-txt').html();
 					edit(id);
-
-				} else if (type === 'del') //删除节点
-				{
+				} else if (type === 'del') { // 删除节点
 					del(elem, id);
 				};
 			}
 		});
 
+		tree.setChecked('demoId', checkbox); // 批量勾选 id 为 1、3 的节点
+
+
 		// 自动触发修改
 		$('.layui-icon-edit').click(function () {
-			// 延时 触发失去焦点事件.
+			// 延时 触发失去焦点事件
 			setTimeout(function () { $('input').trigger("blur"); }, 100);
 		});
 
 	});
 
+
+	function save_auth() {
+		// 获得所有选中的节点数据
+		var checkData = tree_demo.getChecked('id');
+		console.log(checkData);
+		ajax_save('/role/auth', { id: getParams()['id'], checkData: checkData });
+	}
 
 	// 添加
 	function add(pid) {
